k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: whoami
  labels:
    app.kubernetes.io/name: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: whoami
  template:
    metadata:
      labels:
        app.kubernetes.io/name: whoami
    spec:
      imagePullSecrets:
      - name: ghcr
      containers:
      - name: whoami
        image: ghcr.io/nce/whoami:foo
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf
        ports:
        - containerPort: 80
          name: http
      - name: nginx-exporter
        image: nginx/nginx-prometheus-exporter:0.10.0
        args:
          - '-nginx.scrape-uri=http://localhost/status'
        ports:
          - containerPort: 9113
            name: metrics
      volumes:
      - configMap:
          defaultMode: 420
          name: nginx-config
        name: nginx-config
