k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: whoami
spec:
  selector:
    app.kubernetes.io/name: whoami
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
